@@ -105,6 +105,17 @@ name|java
 operator|.
 name|util
 operator|.
+name|Map
+operator|.
+name|Entry
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -1911,6 +1922,130 @@ argument_list|,
 literal|null
 argument_list|)
 decl_stmt|;
+comment|// Maps Solr field names to Carrot2 custom field names
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|customFields
+init|=
+literal|null
+decl_stmt|;
+name|String
+index|[]
+name|customFieldsSpec
+init|=
+name|solrParams
+operator|.
+name|getParams
+argument_list|(
+name|CarrotParams
+operator|.
+name|CUSTOM_FIELD_NAME
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|customFieldsSpec
+operator|!=
+literal|null
+condition|)
+block|{
+name|customFields
+operator|=
+name|Maps
+operator|.
+name|newHashMap
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|String
+name|customFieldSpec
+range|:
+name|customFieldsSpec
+control|)
+block|{
+name|String
+index|[]
+name|split
+init|=
+name|customFieldSpec
+operator|.
+name|split
+argument_list|(
+literal|":"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|split
+operator|.
+name|length
+operator|==
+literal|2
+operator|&&
+name|StringUtils
+operator|.
+name|isNotBlank
+argument_list|(
+name|split
+index|[
+literal|0
+index|]
+argument_list|)
+operator|&&
+name|StringUtils
+operator|.
+name|isNotBlank
+argument_list|(
+name|split
+index|[
+literal|1
+index|]
+argument_list|)
+condition|)
+block|{
+name|customFields
+operator|.
+name|put
+argument_list|(
+name|split
+index|[
+literal|0
+index|]
+argument_list|,
+name|split
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"Unsupported format for "
+operator|+
+name|CarrotParams
+operator|.
+name|CUSTOM_FIELD_NAME
+operator|+
+literal|": '"
+operator|+
+name|customFieldSpec
+operator|+
+literal|"'. Skipping this field definition."
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 comment|// Parse language code map string into a map
 name|Map
 argument_list|<
@@ -2728,6 +2863,52 @@ expr_stmt|;
 break|break;
 block|}
 block|}
+block|}
+block|}
+comment|// Add custom fields
+if|if
+condition|(
+name|customFields
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|entry
+range|:
+name|customFields
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|carrotDocument
+operator|.
+name|setField
+argument_list|(
+name|entry
+operator|.
+name|getValue
+argument_list|()
+argument_list|,
+name|sdoc
+operator|.
+name|getFieldValue
+argument_list|(
+name|entry
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 name|result
