@@ -428,6 +428,83 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// Add a document with more languages, one supported by Carrot2
+specifier|final
+name|SolrInputDocument
+name|docWithCustomFields
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+name|docWithCustomFields
+operator|.
+name|addField
+argument_list|(
+literal|"id"
+argument_list|,
+name|numberOfDocs
+operator|++
+argument_list|)
+expr_stmt|;
+name|docWithCustomFields
+operator|.
+name|addField
+argument_list|(
+literal|"url"
+argument_list|,
+literal|"custom_fields"
+argument_list|)
+expr_stmt|;
+name|docWithCustomFields
+operator|.
+name|addField
+argument_list|(
+literal|"intfield_i"
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+name|docWithCustomFields
+operator|.
+name|addField
+argument_list|(
+literal|"floatfield_f"
+argument_list|,
+literal|10.5
+argument_list|)
+expr_stmt|;
+name|docWithCustomFields
+operator|.
+name|addField
+argument_list|(
+literal|"heading"
+argument_list|,
+literal|"first"
+argument_list|)
+expr_stmt|;
+name|docWithCustomFields
+operator|.
+name|addField
+argument_list|(
+literal|"heading"
+argument_list|,
+literal|"second"
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|h
+operator|.
+name|validateUpdate
+argument_list|(
+name|adoc
+argument_list|(
+name|docWithCustomFields
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|assertNull
 argument_list|(
 name|h
