@@ -649,7 +649,7 @@ literal|"mine"
 argument_list|,
 name|numberOfDocs
 operator|-
-literal|6
+literal|7
 argument_list|)
 return|;
 block|}
@@ -2474,6 +2474,161 @@ operator|.
 name|get
 argument_list|(
 literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|passingOfCustomFields
+specifier|public
+name|void
+name|passingOfCustomFields
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CarrotParams
+operator|.
+name|CUSTOM_FIELD_NAME
+argument_list|,
+literal|"intfield_i:intfield"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CarrotParams
+operator|.
+name|CUSTOM_FIELD_NAME
+argument_list|,
+literal|"floatfield_f:floatfield"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CarrotParams
+operator|.
+name|CUSTOM_FIELD_NAME
+argument_list|,
+literal|"heading:multi"
+argument_list|)
+expr_stmt|;
+comment|// Let the echo mock clustering algorithm know which custom field to echo
+name|params
+operator|.
+name|add
+argument_list|(
+literal|"custom-fields"
+argument_list|,
+literal|"intfield,floatfield,multi"
+argument_list|)
+expr_stmt|;
+specifier|final
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|labels
+init|=
+name|getLabels
+argument_list|(
+name|checkEngine
+argument_list|(
+name|getClusteringEngine
+argument_list|(
+literal|"echo"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"url"
+argument_list|,
+literal|"custom_fields"
+argument_list|)
+argument_list|)
+argument_list|,
+name|params
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|5
+argument_list|,
+name|labels
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Integer field"
+argument_list|,
+literal|"10"
+argument_list|,
+name|labels
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Float field"
+argument_list|,
+literal|"10.5"
+argument_list|,
+name|labels
+operator|.
+name|get
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"List field"
+argument_list|,
+literal|"[first, second]"
+argument_list|,
+name|labels
+operator|.
+name|get
+argument_list|(
+literal|4
 argument_list|)
 argument_list|)
 expr_stmt|;
