@@ -24,6 +24,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -236,6 +245,24 @@ argument_list|>
 name|clusters
 decl_stmt|;
 annotation|@
+name|Input
+annotation|@
+name|Processing
+annotation|@
+name|Attribute
+argument_list|(
+name|key
+operator|=
+literal|"custom-fields"
+argument_list|)
+DECL|field|customFields
+specifier|private
+name|String
+name|customFields
+init|=
+literal|""
+decl_stmt|;
+annotation|@
 name|Override
 DECL|method|process
 specifier|public
@@ -311,6 +338,48 @@ name|name
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+for|for
+control|(
+name|String
+name|field
+range|:
+name|customFields
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+control|)
+block|{
+name|Object
+name|value
+init|=
+name|document
+operator|.
+name|getField
+argument_list|(
+name|field
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|value
+operator|!=
+literal|null
+condition|)
+block|{
+name|cluster
+operator|.
+name|addPhrases
+argument_list|(
+name|value
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|cluster
 operator|.
